# python-deploy

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
examples/: Dockerfile.base  Dockerfile.service  config.toml  service.env
python_deploy/: entry.py
python_deploy/invoke_generator/: helpers.py  settings.py
python_kdeploy/: entry.py
python_kdeploy/invoke_generator/: datatypes.py  helpers.py  service.temp  settings.py
